--- a/main.html
+++ b/main.html
@@ -1,16 +1,114 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Cards Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card img {
+            cursor: pointer;
+            border-radius: 10px;
+        }
+        .card-title, .card-text {
+            text-align: center;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h2 class="text-center my-4">Cards Gallery</h2>
 
+    <div class="container">
+        <div class="row g-3 justify-content-center">
+
+            <!-- Card 1 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top" alt="Image 1" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 1 Title</h6>
+                        <p class="card-text">Description for image 1 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="Image 2" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 2 Title</h6>
+                        <p class="card-text">Description for image 2 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="Image 3" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 3 Title</h6>
+                        <p class="card-text">Description for image 3 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="Image 4" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 4 Title</h6>
+                        <p class="card-text">Description for image 4 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 5 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="Image 5" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 5 Title</h6>
+                        <p class="card-text">Description for image 5 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 6 -->
+            <div class="col-md-4 col-sm-6">
+                <div class="card">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top" alt="Image 6" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
+                    <div class="card-body">
+                        <h6 class="card-title">Image 6 Title</h6>
+                        <p class="card-text">Description for image 6 goes here.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Lightbox Modal -->
+    <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body p-0">
+            <img src="" id="modalImage" class="w-100" alt="Lightbox Image">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Change modal image on card click
+        const lightboxModal = document.getElementById('lightboxModal');
+        const modalImage = document.getElementById('modalImage');
+        lightboxModal.addEventListener('show.bs.modal', event => {
+            const button = event.relatedTarget;
+            modalImage.src = button.getAttribute('data-bs-img');
+        });
+    </script>
 </body>
-
 </html>
