--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
             <!-- Card 1 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top" alt="Image 1" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top lightbox" alt="Image 1" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 1 Title</h6>
                         <p class="card-text">Description for image 1 goes here.</p>
@@ -34,7 +34,7 @@
             <!-- Card 2 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top" alt="Image 2" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top lightbox" alt="Image 2" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 2 Title</h6>
                         <p class="card-text">Description for image 2 goes here.</p>
@@ -45,7 +45,7 @@
             <!-- Card 3 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top" alt="Image 3" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top lightbox" alt="Image 3" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 3 Title</h6>
                         <p class="card-text">Description for image 3 goes here.</p>
@@ -56,7 +56,7 @@
             <!-- Card 4 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top" alt="Image 4" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top lightbox" alt="Image 4" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 4 Title</h6>
                         <p class="card-text">Description for image 4 goes here.</p>
@@ -67,7 +67,7 @@
             <!-- Card 5 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top" alt="Image 5" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top lightbox" alt="Image 5" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 5 Title</h6>
                         <p class="card-text">Description for image 5 goes here.</p>
@@ -78,7 +78,7 @@
             <!-- Card 6 -->
             <div class="col-md-4 col-sm-6">
                 <div class="card">
-                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top" alt="Image 6" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
+                    <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top lightbox" alt="Image 6" data-bs-toggle="modal" data-bs-target="#lightboxModal" data-bs-img="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg">
                     <div class="card-body">
                         <h6 class="card-title">Image 6 Title</h6>
                         <p class="card-text">Description for image 6 goes here.</p>
@@ -102,7 +102,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Change modal image on card click
         const lightboxModal = document.getElementById('lightboxModal');
         const modalImage = document.getElementById('modalImage');
         lightboxModal.addEventListener('show.bs.modal', event => {
